Fix header z-index issues

--- a/pfv/static/assets/css/header.css
+++ b/pfv/static/assets/css/header.css
@@ -8,7 +8,10 @@ header {
   position: fixed;
   top: 0;
   width: 100%;
-  z-index: 999;
+}
+
+header * {
+  z-index: 100;
 }
 
 header + .title {
